--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Windows Desktop Photobooth với Canon camera, Google Drive upload, và QR code download",
   "main": "./out/main/index.js",
   "scripts": {
-    "dev": "cross-env ELECTRON_RUN_AS_NODE= electron-vite dev",
+    "dev": "node scripts/electron-vite-without-run-as-node.js dev",
     "build": "electron-vite build",
-    "preview": "cross-env ELECTRON_RUN_AS_NODE= electron-vite preview",
+    "preview": "node scripts/electron-vite-without-run-as-node.js preview",
     "package": "electron-builder",
     "package:win": "electron-builder --win",
     "lint": "eslint . --ext .ts,.tsx",
@@ -38,6 +38,7 @@
     "@vitest/ui": "^4.0.18",
     "autoprefixer": "^10.4.17",
     "cross-env": "^10.1.0",
+    "electron": "^40.1.0",
     "electron-builder": "^24.9.1",
     "electron-vite": "^2.0.0",
     "happy-dom": "^20.5.0",
