feat: add photo selection UI, webcam/mock camera support, and CI build workflow
- Replace review-all + retake flow with photo selection UI (capture N+extra, pick best N)
- Add webcam and mock camera modes alongside DCC
- Admin settings: configurable extra photos (1-5)
- Frame preview renders actual layers at placeholder positions
- Fix mock camera interference from DCC process monitor
- Add GitHub Actions workflow for Windows NSIS installer build & release
- Update docs and architecture

--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "dependencies": {
     "@electron/get": "^4.0.2",
+    "@fontsource-variable/fredoka": "^5.2.10",
+    "@fontsource-variable/nunito": "^5.2.7",
+    "@fontsource-variable/quicksand": "^5.2.10",
+    "@fontsource/fredoka": "^5.2.10",
+    "@fontsource/nunito": "^5.2.7",
     "chokidar": "^5.0.0",
     "electron-store": "^8.1.0",
     "lucide-react": "^0.563.0",
