--- a/.github/workflows/build-and-release-electron.yml
+++ b/.github/workflows/build-and-release-electron.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm run build
 
       - name: Package Windows NSIS installer
-        run: npm run package:win
+        run: npx electron-builder --win --publish never
 
       - name: Upload installer artifact
         uses: actions/upload-artifact@v4
