--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
       "out/**/*",
       "resources/**/*"
     ],
+    "asarUnpack": [
+      "node_modules/sharp/**/*"
+    ],
     "win": {
       "target": [
         "nsis"
