--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fontsource/fredoka": "^5.2.10",
     "@fontsource/nunito": "^5.2.7",
     "chokidar": "^5.0.0",
+    "cloudinary": "^2.9.0",
+    "dotenv": "^17.2.4",
     "electron-store": "^8.1.0",
     "googleapis": "^171.4.0",
     "lucide-react": "^0.563.0",
