--- a/package.json
+++ b/package.json
@@ -90,7 +90,9 @@
     },
     "nsis": {
       "oneClick": false,
-      "allowToChangeInstallationDirectory": true
+      "allowToChangeInstallationDirectory": true,
+      "allowElevation": true,
+      "runAfterFinish": true
     }
   },
   "engines": {
