fix: resolve sharp module load failure on Windows
- Remove `includeSubNodeModules: false` which blocked @img/sharp-win32-x64
  from being included in asar, causing asarUnpack to have nothing to extract
- Remove redundant extraResources mapping for sharp binaries since
  asarUnpack already handles native module extraction
- Add `--include=optional` to CI npm install for explicit sharp deps
- Add verify step to CI to catch sharp binary issues before packaging

--- a/.github/workflows/build-and-release-electron.yml
+++ b/.github/workflows/build-and-release-electron.yml
@@ -26,7 +26,10 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --include=optional
+
+      - name: Verify sharp native binaries
+        run: node -e "require('@img/sharp-win32-x64/sharp.node'); console.log('sharp-win32-x64 OK')"
 
       - name: Build app
         run: npm run build
